# faultToVect

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  set_env.ps1  vcpkg_deps.txt
.github/workflows/: release.yml  ubuntu.yml  windows.yml
app/: CMakeLists.txt
app/include/: parameters.h  pixgraph.h  raster_transformer.h  vectorization.h  vectorization_utilities.h
app/include/vPixGraph/: v_pix_graph.h
app/src/: main.cpp  parameters.cpp  pixgraph.cpp  raster_transformer.cpp  vectorization.cpp
